fixed alignment issue in Analytics app

--- a/apps/Analytics/index.scss
+++ b/apps/Analytics/index.scss
@@ -42,7 +42,7 @@
 }
 
 .page-body .dashboard {
-    padding:20px;
+    padding:5px;
     height:calc(100%);
 }
 
