--- a/gui/src/public/css/dashboardEditor.scss
+++ b/gui/src/public/css/dashboardEditor.scss
@@ -15,6 +15,8 @@
 .dashboard .flippy-front{
   height: auto;
   min-height: 70vh;
+  padding: 0px;
+  padding-top: 1em;
 }
 .dashboard-filter-btn{
     position: absolute;
@@ -118,7 +120,7 @@ padding-right: 1em;
     padding-bottom: 0px;
     border-radius: 10px;
     position: absolute;
-    width: 98%;
+    width: 100%;
     background-image: linear-gradient(to right top, #3d6776, #4b6f7c, #587682, #657e88, #72868e);
   }
   .dashboard-viewer-div{
@@ -161,3 +163,5 @@ padding-right: 1em;
   .Window_Analytics .dashboard label{
     color: #265160 !important;
   }
+  
+  
